Working reviews and sentiment analysis

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Fall2024_Assignment3_mtorres3-83927450-baf9-4482-b1dc-1a0f11790fbd;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "AzureOpenAI": {
+    "ApiKey": "",
+    "Endpoint": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
