Updated system to use Azure database and tested in deployment environment. It works online!(:

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Fall2024_Assignment3_mtorres3-83927450-baf9-4482-b1dc-1a0f11790fbd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Fall2024_Assignment3_mtorres3-83927450-baf9-4482-b1dc-1a0f11790fbd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:fall2024-assignment3-mtorres3-server.database.windows.net,1433;Initial Catalog=Fall2024-Assignment3-mtorres3-Database;Persist Security Info=False;User ID=reexamine6897;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AzureOpenAI": {
     "ApiKey": "",
